# proxy-component

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: main.yml
assets/: compose.wac  debug.wasm  proj_cargo.toml  recorder.wasm  recorder.wit  util.wit  workspace_cargo.toml
components/debug/: Cargo.toml
components/debug/src/: lib.rs
components/recorder/: Cargo.toml
components/recorder/src/: lib.rs  trace.rs
crates/dialog/: Cargo.toml
crates/dialog/src/: lib.rs
crates/trace/: Cargo.toml
crates/trace/src/: lib.rs
src/: analyze.rs  ast.rs  codegen.rs  instrument.rs  main.rs  run.rs  source.rs  util.rs
src/codegen/: dialog.rs  fuzz.rs  mod.rs  record.rs  replay.rs
src/traits/: dialog.rs  fuzz.rs  mod.rs  proxy.rs  wave.rs  wit.rs
tests/: calculator.wasm  rust.debug.wasm  rust.wasm
wit/: recorder.wit
