[package]
name = "proxy-component"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
heck = "0.5.0"
prettyplease = "0.2.37"
serde = "1.0.226"
serde_json = "1.0.145"
syn = "2.0.108"
tempfile = "3.20.0"
wasmtime = { version = "37.0.0", features = ["wave"] }
wasmtime-wasi = "37.0.0"
#wit-bindgen-core = { git = "https://github.com/chenyan2002/wit-bindgen.git", branch = "proxy" }
#wit-bindgen-rust = { git = "https://github.com/chenyan2002/wit-bindgen.git", branch = "proxy" }
wit-bindgen-core = "0.46.0"
wit-bindgen-rust = "0.46.0"
wit-component = "0.239.0"
